--- a/assets/sass/components/_content-header.scss
+++ b/assets/sass/components/_content-header.scss
@@ -24,7 +24,7 @@
     color: $white;
     position: absolute;
     text-align: center;
-    top: 45%;
+    top: 35%;
     width: 100%;
     z-index: 1;
 
@@ -34,7 +34,7 @@
     }    
   }
 
-  section-title h1 {
+  section.title h1 {
     color: $white;
     font-size: em(48);
     position: relative;
@@ -44,7 +44,6 @@
     &:after {
       content: "";
       display: block;
-      border-bottom: em(1) solid $white; 
       margin: 0.5em auto;
       width: 15%;
     }
